[gd_scene load_steps=15 format=3 uid="uid://bpvfqshd0hbtc"]

[ext_resource type="Script" path="res://src/client/main_menu.gd" id="1_0bsjk"]

[sub_resource type="ProceduralSkyMaterial" id="ProceduralSkyMaterial_jjuhx"]
sky_top_color = Color(0.247059, 0.439216, 0.709804, 1)
sky_horizon_color = Color(0.561765, 0.609804, 0.677451, 1)
ground_bottom_color = Color(0, 0, 0, 1)
ground_horizon_color = Color(0.561765, 0.609804, 0.677451, 1)

[sub_resource type="Sky" id="Sky_d01vu"]
sky_material = SubResource("ProceduralSkyMaterial_jjuhx")

[sub_resource type="Environment" id="Environment_wos6f"]
background_mode = 2
sky = SubResource("Sky_d01vu")
tonemap_mode = 3
fog_enabled = true
fog_light_color = Color(0.403922, 0.541176, 0.6, 1)
fog_density = 0.0151

[sub_resource type="BoxMesh" id="BoxMesh_2nrv6"]
size = Vector3(1000, 0.5, 1000)

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_agtjd"]
albedo_color = Color(0.164706, 0.341176, 0.0823529, 1)
roughness = 0.73

[sub_resource type="CylinderMesh" id="CylinderMesh_8ldio"]
top_radius = 3.0
bottom_radius = 3.0
height = 0.1

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_4xkdc"]
albedo_color = Color(0.258824, 0.243137, 0.219608, 1)

[sub_resource type="CylinderMesh" id="CylinderMesh_pt242"]
top_radius = 2.5
bottom_radius = 2.5
height = 0.1

[sub_resource type="CapsuleMesh" id="CapsuleMesh_b5w26"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_c28s8"]

[sub_resource type="Animation" id="Animation_2wp3v"]
resource_name = "Authenticated"
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Camera3D:position")
tracks/0/interp = 2
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 1),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Vector3(-5, 5, 5), Vector3(-4, 2.5, 4)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Camera3D:rotation")
tracks/1/interp = 2
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 1),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Vector3(-0.523599, -0.785398, 0), Vector3(-0.349066, -0.785398, 0)]
}

[sub_resource type="Animation" id="Animation_icut0"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Camera3D:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector3(-5, 5, 5)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Camera3D:rotation")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector3(-0.523599, -0.785398, 0)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_fxh46"]
_data = {
"Authenticated": SubResource("Animation_2wp3v"),
"RESET": SubResource("Animation_icut0")
}

[node name="MainMenu" type="Node3D" node_paths=PackedStringArray("ui_tab_container", "username_linedit", "password_linedit", "login_button", "error_label", "characters_itemlist", "create_character_popup_panel", "character_name_line_edit", "create_character_button", "animation_player")]
script = ExtResource("1_0bsjk")
ui_tab_container = NodePath("UITabContainer")
username_linedit = NodePath("UITabContainer/AuthMenu/CenterContainer/PanelContainer/MarginContainer/VBoxContainer/UsernameLineEdit")
password_linedit = NodePath("UITabContainer/AuthMenu/CenterContainer/PanelContainer/MarginContainer/VBoxContainer/PasswordLineEdit")
login_button = NodePath("UITabContainer/AuthMenu/CenterContainer/PanelContainer/MarginContainer/VBoxContainer/LoginButton")
error_label = NodePath("UITabContainer/AuthMenu/CenterContainer/PanelContainer/MarginContainer/VBoxContainer/ErrorLabel")
characters_itemlist = NodePath("UITabContainer/CharacterMenu/PanelContainer/MarginContainer/VBoxContainer/CharactersItemList")
create_character_popup_panel = NodePath("UITabContainer/CharacterMenu/CreateCharacterPopupPanel")
character_name_line_edit = NodePath("UITabContainer/CharacterMenu/CreateCharacterPopupPanel/MarginContainer/VBoxContainer/CharacterNameLineEdit")
create_character_button = NodePath("UITabContainer/CharacterMenu/CreateCharacterPopupPanel/MarginContainer/VBoxContainer/CreateCharacterButton")
animation_player = NodePath("AnimationPlayer")

[node name="DirectionalLight3D" type="DirectionalLight3D" parent="."]
transform = Transform3D(-0.866023, -0.433016, 0.250001, 0, 0.499998, 0.866027, -0.500003, 0.749999, -0.43301, 0, 0, 0)
shadow_enabled = true

[node name="WorldEnvironment" type="WorldEnvironment" parent="."]
environment = SubResource("Environment_wos6f")

[node name="MeshInstance3D" type="MeshInstance3D" parent="."]
mesh = SubResource("BoxMesh_2nrv6")
surface_material_override/0 = SubResource("StandardMaterial3D_agtjd")

[node name="Camera3D" type="Camera3D" parent="."]
transform = Transform3D(0.707107, 0.353553, -0.612372, 0, 0.866025, 0.5, 0.707107, -0.353553, 0.612372, -5, 5, 5)
current = true

[node name="MeshInstance3D2" type="MeshInstance3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.3, 0)
mesh = SubResource("CylinderMesh_8ldio")
surface_material_override/0 = SubResource("StandardMaterial3D_4xkdc")

[node name="MeshInstance3D4" type="MeshInstance3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.427457, 0)
mesh = SubResource("CylinderMesh_pt242")
surface_material_override/0 = SubResource("StandardMaterial3D_4xkdc")

[node name="MeshInstance3D3" type="MeshInstance3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 1.4814, 0)
visible = false
mesh = SubResource("CapsuleMesh_b5w26")

[node name="UITabContainer" type="TabContainer" parent="."]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_styles/panel = SubResource("StyleBoxEmpty_c28s8")
clip_tabs = false
tabs_visible = false

[node name="AuthMenu" type="Control" parent="UITabContainer"]
layout_mode = 2
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="CenterContainer" type="CenterContainer" parent="UITabContainer/AuthMenu"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="PanelContainer" type="PanelContainer" parent="UITabContainer/AuthMenu/CenterContainer"]
layout_mode = 2
offset_left = 466.0
offset_top = 241.0
offset_right = 686.0
offset_bottom = 407.0

[node name="MarginContainer" type="MarginContainer" parent="UITabContainer/AuthMenu/CenterContainer/PanelContainer"]
layout_mode = 2
offset_right = 220.0
offset_bottom = 166.0
theme_override_constants/margin_left = 10
theme_override_constants/margin_top = 10
theme_override_constants/margin_right = 10
theme_override_constants/margin_bottom = 10

[node name="VBoxContainer" type="VBoxContainer" parent="UITabContainer/AuthMenu/CenterContainer/PanelContainer/MarginContainer"]
layout_mode = 2
offset_left = 10.0
offset_top = 10.0
offset_right = 210.0
offset_bottom = 156.0
theme_override_constants/separation = 10

[node name="UsernameLineEdit" type="LineEdit" parent="UITabContainer/AuthMenu/CenterContainer/PanelContainer/MarginContainer/VBoxContainer"]
custom_minimum_size = Vector2(200, 0)
layout_mode = 2
offset_right = 200.0
offset_bottom = 31.0
placeholder_text = "Username"

[node name="PasswordLineEdit" type="LineEdit" parent="UITabContainer/AuthMenu/CenterContainer/PanelContainer/MarginContainer/VBoxContainer"]
layout_mode = 2
offset_top = 41.0
offset_right = 200.0
offset_bottom = 72.0
placeholder_text = "Password"
secret = true

[node name="LoginButton" type="Button" parent="UITabContainer/AuthMenu/CenterContainer/PanelContainer/MarginContainer/VBoxContainer"]
layout_mode = 2
offset_top = 82.0
offset_right = 200.0
offset_bottom = 113.0
text = "Login"

[node name="ErrorLabel" type="Label" parent="UITabContainer/AuthMenu/CenterContainer/PanelContainer/MarginContainer/VBoxContainer"]
layout_mode = 2
offset_top = 123.0
offset_right = 200.0
offset_bottom = 146.0

[node name="CharacterMenu" type="Control" parent="UITabContainer"]
layout_mode = 2
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="PanelContainer" type="PanelContainer" parent="UITabContainer/CharacterMenu"]
custom_minimum_size = Vector2(288, 0)
layout_mode = 1
anchors_preset = 9
anchor_bottom = 1.0
offset_right = 144.0
grow_vertical = 2

[node name="MarginContainer" type="MarginContainer" parent="UITabContainer/CharacterMenu/PanelContainer"]
layout_mode = 2
offset_right = 288.0
offset_bottom = 648.0
theme_override_constants/margin_left = 10
theme_override_constants/margin_top = 10
theme_override_constants/margin_right = 10
theme_override_constants/margin_bottom = 10

[node name="VBoxContainer" type="VBoxContainer" parent="UITabContainer/CharacterMenu/PanelContainer/MarginContainer"]
layout_mode = 2
offset_left = 10.0
offset_top = 10.0
offset_right = 278.0
offset_bottom = 638.0

[node name="CharactersItemList" type="ItemList" parent="UITabContainer/CharacterMenu/PanelContainer/MarginContainer/VBoxContainer"]
layout_mode = 2
offset_right = 268.0
offset_bottom = 574.0
size_flags_vertical = 3

[node name="NewCharacterButton" type="Button" parent="UITabContainer/CharacterMenu/PanelContainer/MarginContainer/VBoxContainer"]
custom_minimum_size = Vector2(0, 50)
layout_mode = 2
offset_top = 578.0
offset_right = 268.0
offset_bottom = 628.0
size_flags_vertical = 4
text = "New Character"

[node name="CreateCharacterPopupPanel" type="PopupPanel" parent="UITabContainer/CharacterMenu"]
title = "Create Character"
size = Vector2i(200, 100)
borderless = false
min_size = Vector2i(200, 0)

[node name="MarginContainer" type="MarginContainer" parent="UITabContainer/CharacterMenu/CreateCharacterPopupPanel"]
offset_left = 4.0
offset_top = 4.0
offset_right = 196.0
offset_bottom = 96.0
theme_override_constants/margin_left = 10
theme_override_constants/margin_top = 10
theme_override_constants/margin_right = 10
theme_override_constants/margin_bottom = 10

[node name="VBoxContainer" type="VBoxContainer" parent="UITabContainer/CharacterMenu/CreateCharacterPopupPanel/MarginContainer"]
layout_mode = 2
offset_left = 10.0
offset_top = 10.0
offset_right = 182.0
offset_bottom = 82.0

[node name="CharacterNameLineEdit" type="LineEdit" parent="UITabContainer/CharacterMenu/CreateCharacterPopupPanel/MarginContainer/VBoxContainer"]
layout_mode = 2
offset_right = 172.0
offset_bottom = 31.0
placeholder_text = "Name"

[node name="CreateCharacterButton" type="Button" parent="UITabContainer/CharacterMenu/CreateCharacterPopupPanel/MarginContainer/VBoxContainer"]
layout_mode = 2
offset_top = 35.0
offset_right = 172.0
offset_bottom = 66.0
text = "Create"

[node name="JoinButton" type="Button" parent="UITabContainer/CharacterMenu"]
layout_mode = 1
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -21.5
offset_top = -123.0
offset_right = 21.5
offset_bottom = -92.0
grow_horizontal = 2
grow_vertical = 0
theme_override_font_sizes/font_size = 36
disabled = true
text = "JOIN"

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_fxh46")
}

[connection signal="pressed" from="UITabContainer/AuthMenu/CenterContainer/PanelContainer/MarginContainer/VBoxContainer/LoginButton" to="." method="_on_login_button_pressed"]
[connection signal="item_selected" from="UITabContainer/CharacterMenu/PanelContainer/MarginContainer/VBoxContainer/CharactersItemList" to="." method="_on_characters_item_list_item_selected"]
[connection signal="pressed" from="UITabContainer/CharacterMenu/PanelContainer/MarginContainer/VBoxContainer/NewCharacterButton" to="." method="_on_new_character_button_pressed"]
[connection signal="pressed" from="UITabContainer/CharacterMenu/CreateCharacterPopupPanel/MarginContainer/VBoxContainer/CreateCharacterButton" to="." method="_on_create_character_button_pressed"]
